Homepage spacing fixed

--- a/client/reactdockerize/src/index.css
+++ b/client/reactdockerize/src/index.css
@@ -227,7 +227,7 @@ code {
   background-color:crimson;
   color: white;
   font-size: 16px;
-  padding: 12px 24px;
+  padding: 8px 16px;
   border: none;
   cursor: pointer;
   border-radius: 5px;
